install nordhealth dependencies

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
+    "@nordhealth/css": "latest",
+    "@nordhealth/react": "latest",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
