--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "@nordhealth/components": "^1.0.0-rc.8",
-    "@nordhealth/css": "latest",
-    "@nordhealth/react": "latest",
+    "@nordhealth/components": "*",
+    "@nordhealth/css": "*",
+    "@nordhealth/react": "*",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
