Install Nord dependencies

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "@nordhealth/components": "^4.1.0",
+    "@nordhealth/css": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
