--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,6 +6,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "types": ["@nordhealth/components/lib/react.d.ts"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
